Revision history for Chart::OFC2

0.03    26.11.2008
        - pie chart added
        - hbar chart added
        - GNU GPL licensing

0.02    24.11.2008
        Just MANIFEST fix

0.01    22.11.2008
        First version, released on an unsuspecting world.