@@ -22,7 +22,7 @@ our $VERSION = '0.01';
 
 =head1 PROPERTIES
 
-    has 'type_name'    => (is => 'rw', isa => enum(['bar', 'bar_filled', 'pie', 'hbar']), required => 1);
+    has 'type_name'    => (is => 'rw', isa => enum([qw(bar bar_filled pie hbar line line_dot line_hollow area_hollow)]), required => 1);
     has 'values'       => (is => 'rw', isa => 'ArrayRef', trigger => sub { $_[0]->extremes->reset('y' => $_[1]); } );
     has 'extremes'     => (is => 'rw', isa => 'Chart-OFC2-Extremes',  default => sub { Chart::OFC2::Extremes->new() }, lazy => 1);
     has 'use_extremes' => (is => 'rw', isa => 'Bool',  default => 1 );
@@ -33,7 +33,7 @@ our $VERSION = '0.01';
 
 =cut
 
-has 'type_name'    => (is => 'rw', isa => enum(['bar', 'bar_filled', 'pie', 'hbar']), required => 1);
+has 'type_name'    => (is => 'rw', isa => enum([qw(bar bar_filled pie hbar line line_dot line_hollow area_hollow)]), required => 1);
 has 'values'       => (is => 'rw', isa => 'ArrayRef', trigger => sub { $_[0]->extremes->reset('y' => $_[1]); } );
 has 'extremes'     => (is => 'rw', isa => 'Chart-OFC2-Extremes',  default => sub { Chart::OFC2::Extremes->new() }, lazy => 1);
 has 'use_extremes' => (is => 'rw', isa => 'Bool',);
