@@ -4,6 +4,7 @@ Revision history for Chart::OFC2
         - pie chart added
         - hbar chart added
         - GNU GPL licensing
+        - line chart added
 
 0.02    24.11.2008
         Just MANIFEST fix
